Document PPDG/src/objects/HPP_extended_opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Exception_Reason_L2__c</fullName>
        <label>Exception Reason L2</label>
        <picklist>
            <controllingField>Exception_Reason_L1__c</controllingField>
            <picklistValues>
                <fullName>Residency status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age greater than 80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One or more applicants younger than 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCJs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcies/IVAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt relief order(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affordability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self employed &lt; 3 years (non-medical professionals only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed &lt; 6 months and  on probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limits exceeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below minimum value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exception_Reason_Other__c</fullName>
        <description>C0068</description>
        <label>Exception Reason Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exception_notes__c</fullName>
        <label>Exception notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_DD_based_on_status__c</fullName>
        <formula>IF( Text(Opportunity__r.Status_HPP_CAA__c) = &quot;Submitted to underwriting&quot; , today()+98,today() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected DD based on status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filed__c</fullName>
        <label>Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Income_Amount__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Income Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_ROT_match__c</fullName>
        <label>Finance amount ROT match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_amount_ROT_match_comments__c</fullName>
        <label>Finance amount ROT match comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firm_FSA_Ref__c</fullName>
        <defaultValue>&quot;229148&quot;</defaultValue>
        <description>For use with FSA Report</description>
        <label>Firm FSA Ref</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Line_check_done__c</fullName>
        <inlineHelpText>For use with HPP observations</inlineHelpText>
        <label>First Line check done?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full File check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live/Rec check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_line_check_date__c</fullName>
        <label>First line check date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_address_ROT_match__c</fullName>
        <label>Full address ROT match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_address_ROT_match_comments__c</fullName>
        <label>Full address ROT match comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Full_lease_term__c</fullName>
        <label>Full lease term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_name_ROT_match__c</fullName>
        <label>Full name ROT match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_name_ROT_match_comments__c</fullName>
        <label>Full name ROT match comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funds_returned_to_IBB__c</fullName>
        <description>For use in Martineau Integration</description>
        <label>Funds returned to Al Rayan Bank</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HMLR_applications_v1__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>HMLR applications</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HPPSolicitorConfirmCompletion__c</fullName>
        <label>HPPSolicitorConfirmCompletion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPPStage__c</fullName>
        <formula>Text(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPPStage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPP_Characteristics__c</fullName>
        <defaultValue>&quot;D&quot;</defaultValue>
        <label>HPP Characteristics</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPP_Live_Balance__c</fullName>
        <formula>Opportunity__r.Account_with_IBB__r.Available_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP Live Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Previous_Month_s_Balance__c</fullName>
        <formula>Opportunity__r.Account_with_IBB__r.Previous_Month_s_Balance__c</formula>
        <label>HPP Previous Month&apos;s Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Terms_Version__c</fullName>
        <label>HPP Terms Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPS_IBB_Solicitor_Letter_Address__c</fullName>
        <defaultValue>&quot;Optima&quot; &amp; &quot; &quot;&amp; &quot;Legal&quot;&amp; &quot; &quot;&amp; &quot;(Scotland)&quot;&amp; &quot; &quot;&amp; &quot;Ltd&quot;&amp; BR()&amp; &quot;RWF&quot;&amp; &quot; &quot; &amp; &quot;House&quot;&amp; &quot; &quot;&amp; &quot;5&quot;&amp; &quot; &quot;&amp; &quot;Renfield&quot;&amp; &quot;Street&quot;&amp;BR()&amp; &quot;Glasgow&quot;&amp; BR()&amp; &quot; &quot;&amp; &quot;G2&quot;&amp; &quot; &quot;&amp; &quot;5EZ&quot;</defaultValue>
        <description>HPS IBB Solicitor Address for solicitor letter</description>
        <inlineHelpText>HPS IBB Solicitor Address for solicitor letter</inlineHelpText>
        <label>HPS Solicitor Letter Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HPS_IBB_Solicitor_Letter_Name__c</fullName>
        <description>HPS IBB Solicitor Letter Contact Name</description>
        <inlineHelpText>HPS IBB Solicitor Letter Contact Name</inlineHelpText>
        <label>HPS Solicitor Letter Name</label>
        <picklist>
            <picklistValues>
                <fullName>Caroline Hay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gordon Cunningham</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HPS_IBB_Solicitor_Short_Name__c</fullName>
        <description>Short name for HPS IBB Solicitor</description>
        <inlineHelpText>Short name for HPS IBB Solicitor</inlineHelpText>
        <label>HPS Solicitor Short Name</label>
        <picklist>
            <picklistValues>
                <fullName>Caroline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gordan</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBBSolicitorLetterAddress__c</fullName>
        <defaultValue>&quot;Shakespeare&quot; &amp; &quot; &quot;&amp; &quot;Martineau LLP&quot; &amp; &quot; &quot;&amp; &quot;Solicitors&quot;&amp; BR()&amp; &quot;No1&quot; &amp; &quot; &quot;&amp; &quot;Colmore&quot; &amp; &quot; &quot;&amp; &quot;Square&quot;&amp; BR()&amp; &quot;Birmingham&quot;&amp; BR()&amp; &quot;B4&quot; &amp; &quot; &quot;&amp; &quot;6AA&quot;</defaultValue>
        <label>SolicitorLetterAddress</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IBBSolicitorLetterName__c</fullName>
        <label>SolicitorLetterName</label>
        <picklist>
            <picklistValues>
                <fullName>Mohammed Saqub</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBBSolicitorShortName__c</fullName>
        <label>SolicitorShortName</label>
        <picklist>
            <picklistValues>
                <fullName>Mohammed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBB_Solicitor__c</fullName>
        <label>Al Rayan Bank Solicitor</label>
        <picklist>
            <picklistValues>
                <fullName>Shakespeare Martineau LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optima Legal (Scotland) Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBB_solicitors_confirmation__c</fullName>
        <label>Solicitors confirmation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_a_flat_how_many_storeys_high__c</fullName>
        <label>If a flat, how many storeys high?</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncomeMultiplier__c</fullName>
        <label>Income Multiplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Ver__c</fullName>
        <description>Y: Income evidenced
N: Income not evidenced
FSA Report</description>
        <label>Income Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indemnity_policies__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Indemnity policies</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Index_Map_search__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Index Map search</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Instruction_Received_from_IBB__c</fullName>
        <inlineHelpText>This field will be populated when SGH Martineau&apos;s have received Instruction from Al Rayan Bank to start work</inlineHelpText>
        <label>Instruction Received from Al Rayan Bank</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introductory_Contact_Made__c</fullName>
        <description>Built as per instructions by TH 09/09/13. To be used for REAT reporting and management. To be used to know who the REAT case owner is from the outset.</description>
        <label>Sales Support: Introductory Contact Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_property_above_commercial_premise__c</fullName>
        <inlineHelpText>Is the property above commercial premise?</inlineHelpText>
        <label>Is property above commercial premise?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_property_expublic_sector__c</fullName>
        <label>Is the property ex-public sector</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_property_your_main_residence__c</fullName>
        <label>Is the property your main residence?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_an_element_of_Gift_involved__c</fullName>
        <label>Is there an element of Gift involved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Land_Charges__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Land Charges</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Month_FTV__c</fullName>
        <formula>-HPP_Previous_Month_s_Balance__c/Opportunity__r.Purchase_price_market_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month FTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_offer_issued_date__c</fullName>
        <formula>Offer_letter_sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last offer issued date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_possible_date_for_completion__c</fullName>
        <formula>Offer_letter_sent__c  + 120</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last possible date for completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Affordability_Results__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Affordability Results</label>
        <referenceTo>AffordabilityResults__c</referenceTo>
        <relationshipLabel>HPP extended opportunities</relationshipLabel>
        <relationshipName>HPP_extended_opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Post_Val_Decision_Date__c</fullName>
        <formula>IF ( Post_valuation_decision_date__c  &gt;  Post_Val_Dec_1_Date__c , 
Post_valuation_decision_date__c , 
Post_Val_Dec_1_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Post Val Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_PreVal_Decision_Date__c</fullName>
        <formula>IF (Pre_Val_2_Date__c &gt;  Pre_Val_1_Date__c,  
Pre_Val_2_Date__c, 
Pre_Val_1_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest PreVal Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Agreement__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Lease Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Agreement_executed_undated__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Lease Agreement (executed/undated)</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Charge_and_Conditions__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Legal Charge and Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_title_at_land_registry_update__c</fullName>
        <label>Legal title at land registry update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Length_of_AST__c</fullName>
        <inlineHelpText>Please state the length of the AST</inlineHelpText>
        <label>Length of AST</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit_of_authority_list__c</fullName>
        <label>Limit of authority list</label>
        <picklist>
            <picklistValues>
                <fullName>Board Risk Credit Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Risk Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Underwriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_search__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Local search</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mainland__c</fullName>
        <label>Mainland</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manual_valuation_instructed__c</fullName>
        <description>To be completed by the seller when a valuation has been instructed manually.</description>
        <label>Manual valuation instructed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mining_search__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Mining search</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_bedrooms__c</fullName>
        <label>No of bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <formula>IF(ISBLANK(Date_Application_Assessed__c), 


CASE(MOD( ( Opportunity__r.Valuation_review_date__c) - DATE(1985,6,24),7), 
0 , CASE( MOD( TODAY() - ( Opportunity__r.Valuation_review_date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - ( Opportunity__r.Valuation_review_date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - ( Opportunity__r.Valuation_review_date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - ( Opportunity__r.Valuation_review_date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - ( Opportunity__r.Valuation_review_date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - ( Opportunity__r.Valuation_review_date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - ( Opportunity__r.Valuation_review_date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY() - (Opportunity__r.Valuation_review_date__c) )/7)*5)-1 , 

CASE(MOD((Date_Application_Assessed__c) - DATE(1985,6,24),7), 
0 , CASE( MOD(  Opportunity__r.Valuation_review_date__c - (Date_Application_Assessed__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD(  Opportunity__r.Valuation_review_date__c - (Date_Application_Assessed__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD(  Opportunity__r.Valuation_review_date__c - (Date_Application_Assessed__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD(  Opportunity__r.Valuation_review_date__c - (Date_Application_Assessed__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD(  Opportunity__r.Valuation_review_date__c - (Date_Application_Assessed__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD(  Opportunity__r.Valuation_review_date__c - (Date_Application_Assessed__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD(  Opportunity__r.Valuation_review_date__c - (Date_Application_Assessed__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((  Opportunity__r.Valuation_review_date__c - (Date_Application_Assessed__c) )/7)*5)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_cars__c</fullName>
        <label>Number of cars</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS1_land_registry_charges_in_date__c</fullName>
        <label>OS1 land registry charges in date</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OS1_land_registrycharges_indate_comments__c</fullName>
        <label>OS1 land registrycharges indate comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occupancy_Declaration_and_Occupier_s__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <inlineHelpText>Occupancy Declaration and Occupier&apos;s Consent</inlineHelpText>
        <label>Occupancy Declar &amp; Occupier’s Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occupier__c</fullName>
        <description>For use with property details and valuation</description>
        <label>Occupier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferLetterSignatureName__c</fullName>
        <formula>OfferLetterSignature__r.FirstName &amp; &quot; &quot; &amp; OfferLetterSignature__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OfferLetterSignatureName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferLetterSignatureRole__c</fullName>
        <formula>OfferLetterSignature__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OfferLetterSignatureRole</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferLetterSignature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OfferLetterSignature</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_extended_opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Sent_to_Drawdown__c</fullName>
        <formula>Actual_Completion_Date__c  -  Offer_letter_sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Sent to Drawdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Sent_to_Drawdown_working_days__c</fullName>
        <formula>IF(AND((5 - (CASE(MOD(  Offer_letter_sent__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD( Actual_Completion_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
(((Actual_Completion_Date__c - Offer_letter_sent__c ) + 1) &lt; 7)), 
((CASE(MOD( Actual_Completion_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(Offer_letter_sent__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))), 
(((FLOOR((( Actual_Completion_Date__c - Offer_letter_sent__c ) - (CASE(MOD( Offer_letter_sent__c - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) + 
(CASE(MOD( Offer_letter_sent__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD( Actual_Completion_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Sent to Drawdown working days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_accepted_to_drawdown__c</fullName>
        <formula>Actual_Completion_Date__c - ROT_Decision_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer accepted to drawdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_issued_plus_75_days__c</fullName>
        <formula>Offer_letter_sent__c +75</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer issued plus 75 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_letter_expiry_date__c</fullName>
        <description>Offer letter sent date + 30 days</description>
        <formula>(Offer_letter_sent__c)+ 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer letter expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_letter_sent__c</fullName>
        <label>Latest Offer letter sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_printed__c</fullName>
        <label>Offer printed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_returned_field__c</fullName>
        <label>Offer returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_sent_to_offer_returned__c</fullName>
        <formula>Offer_returned_field__c  -  Offer_letter_sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer sent to offer returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Copies_Epitome__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Office Copies/Epitome</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_hold_since_date__c</fullName>
        <label>On hold since date</label>
        <type>Date</type>
    </fields>
</CustomObject>